Added scroll-to-top button and updated styles

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <a id="top"></a>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Akhil’s Anime Picks — Anime Recommendations</title>
@@ -583,5 +584,6 @@
       <p>Built with ❤️ by Akhil Pal — <a href="https://github.com/amethystakira" target="_blank" rel="noopener">amethystakira</a></p>
     </div>
   </footer>
+  <a href="#top" id="scrollToTopBtn" title="Go to top">Top</a>
 </body>
 </html>
